k8s/ingress/shcp-test-api-public-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shcp-test-api-public-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /test/api/(users)(/.*)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 3000

          - path: /test/api/(orders)(/.*)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 3003

          - path: /test/api/(payment)(/.*)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-service
                port:
                  number: 4000

          - path: /test/api/(products)(/.*)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-service
                port:
                  number: 3005

          - path: /test/api/(search)(/.*)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: search-service
                port:
                  number: 5003
